# AntigravityX

./: .gitignore  CMakeLists.txt
.github/workflows/: android-build.yml  build-ios.yml  build.yml  main.yml
CHECAR ESTO/: desarrollo_propio_y_bypass.txt  guia_tecnica_estudio.txt  inicio_libwarzone_raw.txt  posibles_offsets.txt
ImguiMenu/ImguiMenu/framework/: gui.cpp
ImguiMenu/ImguiMenu/framework/data/: fonts.h
ImguiMenu/ImguiMenu/framework/headers/: functions.h
ImguiMenu/ImguiMenu/framework/helpers/: blur.cpp  draw.cpp
ImguiMenu/ImguiMenu/framework/settings/: colors.h  elements.h  variables.h
ImguiMenu/ImguiMenu/framework/widgets/: button.cpp  checkbox.cpp  child.cpp  color_edit.cpp  dropdown.cpp  helpers.cpp  keybind.cpp  section.cpp  slider.cpp  window.cpp
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  GameLib.cpp  Offsets.h
android/app/src/main/cpp/KittyMemory/: KittyIOFile.cpp
android/app/src/main/java/com/antigravityx/: MainActivity.kt  MenuState.kt  OverlayService.kt
android/app/src/main/java/com/antigravityx/ui/: FloatingButtonView.kt  OverlayMenuView.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/: Cleaner.cpp  Cleaner.h  ProcessManager.cpp  StartupManager.cpp  StartupManager.h  Tweaks.h
ff_decompiled/smali/com/dts/freefireth/: FFApplication.smali
ios/: project.yml
ios/AntiGravityX/: AntiGravityXApp.swift  FloatingButtonView.swift  MenuState.swift  OverlayMenuView.swift
src/: main.cpp
src/core/: ProcessManager.h  Tweaks.cpp
src/ui/: MainWindow.cpp  Theme.cpp  Theme.h
ui/: MainWindow.cpp  MainWindow.h  Theme.cpp
